# scgms-web

./: .gitignore  CMakeLists.txt  DALSI_KONFIG.ini  README.md  docker-compose.yml  package-lock.json  scgms_wrapper  scgms_wrapper.cpp  test.py  testovaci_konfig.ini
backend/: Dockerfile  app.js  binding.gyp  package-lock.json  package.json
backend/flask_middleware/: app.py
backend/flask_middleware/routes/: config.py  filters.py  library.py  metrics.py  models.py  optimization.py  signals.py  solvers.py
backend/flask_middleware/services/: config_service.py  filter_service.py  library_service.py  metric_service.py  model_service.py  optimization_service.py  signal_service.py  solver_service.py
backend/routes/: filter_list.txt  simulation.js  test.js
backend/scgms_wrappers/: CMakeLists.txt  backupwrapper.txt  cmakeProDocker.txt  novyCMAKE.txt  scgms_wrapper.cpp
data/: sincos.ini
data/cfg1/: config1.ini
data/cfg2/: 015.csv  config2.ini
frontend/: Dockerfile  index.html  onelog.txt  package-lock.json  package.json
frontend/src/: FiltersPage.css  FiltersPage.jsx  ParameterInput.jsx  apiConstants.jsx  index.css  main.jsx
frontend/src/components/: AvailableFilterList.jsx  FilterConfigModal.jsx  LoadConfigModal.jsx  ModelBoundsEditableTable.jsx  OptimizeParametersPage.jsx  ParameterInput.jsx  SaveConfigModal.jsx  SelectedFilterList.jsx  SimulationPage.jsx  SimulationTabs.jsx  SvgTabs.jsx  TimeInput.jsx  TimeWithDaysInput.jsx
frontend/src/constants/: apiConstants.jsx
frontend/src/pages/: FiltersPage.jsx  MainPage.jsx
frontend/src/services/: configService.jsx  filterService.jsx  metricService.jsx  modelService.jsx  optimizationService.jsx  signalService.jsx  solverService.jsx  utils.jsx
scgms_wrapper.dSYM/Contents/: Info.plist
scgms_wrapper.dSYM/Contents/Resources/DWARF/: scgms_wrapper
scgms_wrapper.dSYM/Contents/Resources/Relocations/aarch64/: scgms_wrapper.yml
scgms_wrappers/: scgms_wrapper.cpp
